# video-playback-things

./: command.txt  readme.md
color_simplifier/: Cargo.toml
color_simplifier/src/: color_simplifier.rs  color_utils.rs  colors.json  main.rs
node_splitter/: package.json  server.js
plugin/: build.gradle  settings.gradle
plugin/src/main/java/space/rph/videoads/: AECommand.java  Image3Command.java  ImageCommand.java  NewImageCommand.java  PacketStuff.java  Renderer.java  State.java  Videoads.java
plugin/src/main/resources/: plugin.yml
