[package]
name = "realtime-converter"
version = "0.1.0"
authors = ["rph <rphsoftware@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.7"
notify = "4.0.15"
bmp = "0.5.0"
serde_json = "1.0.58"
lab = "0.11.0"
deltae = "0.3.0"